loading and icons

--- a/src/app/modules/auth/unlock-session/unlock-session.component.html
+++ b/src/app/modules/auth/unlock-session/unlock-session.component.html
@@ -7,8 +7,8 @@
             </div>
 
             <!-- Title -->
-            <div class="mt-8 text-4xl font-extrabold tracking-tight leading-tight">Unlock your session</div>
-            <div class="mt-0.5 font-medium">Your session is locked due to inactivity</div>
+            <div class="mt-8 text-4xl font-extrabold tracking-tight leading-tight">Acesso bloqueado</div>
+            <div class="mt-0.5 font-medium">Seu acesso foi bloqueado por inatividade</div>
 
             <!-- Alert -->
             <fuse-alert
