implementando login e cadastro

--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -69,7 +69,7 @@
                         matInput
                         [formControlName]="'email'">
                     <mat-error *ngIf="signInForm.get('email').hasError('required')">
-                        Email é obrigatório
+                        Campo obrigatório
                     </mat-error>
                     <mat-error *ngIf="signInForm.get('email').hasError('email')">
                         Preencha um Email válido
@@ -80,27 +80,27 @@
                 <mat-form-field class="w-full">
                     <mat-label>Senha</mat-label>
                     <input
-                        id="password"
+                        id="senha"
                         matInput
-                        type="password"
-                        [formControlName]="'password'"
-                        #passwordField>
+                        type="senha"
+                        [formControlName]="'senha'"
+                        #senhaField>
                     <button
                         mat-icon-button
                         type="button"
-                        (click)="passwordField.type === 'password' ? passwordField.type = 'text' : passwordField.type = 'password'"
+                        (click)="senhaField.type === 'senha' ? senhaField.type = 'text' : senhaField.type = 'senha'"
                         matSuffix>
                         <mat-icon
                             class="icon-size-5"
-                            *ngIf="passwordField.type === 'password'"
+                            *ngIf="senhaField.type === 'senha'"
                             [svgIcon]="'heroicons_solid:eye'"></mat-icon>
                         <mat-icon
                             class="icon-size-5"
-                            *ngIf="passwordField.type === 'text'"
+                            *ngIf="senhaField.type === 'text'"
                             [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
                     </button>
                     <mat-error>
-                        Password is required
+                        Campo obrigatório
                     </mat-error>
                 </mat-form-field>
 
