configurando login com o google

--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -148,7 +148,9 @@
                     <button
                         class="flex-auto"
                         type="button"
-                        mat-stroked-button>
+                        mat-stroked-button
+                        (click)="authenticate()"
+                        >
                         <div class="w-8">
                             <img src="assets/icons/google.svg"  />
                         </div>
