--- a/src/app/modules/auth/sign-out/sign-out.component.html
+++ b/src/app/modules/auth/sign-out/sign-out.component.html
@@ -11,7 +11,7 @@
             <div class="flex justify-center mt-0.5 font-medium">
                 <!-- Redirect countdown -->
                 <ng-container *ngIf="countdown > 0">
-                    Redirecionando em {{countdown | i18nPlural: countdownMapping }}
+                    Redirecionando em {{countdown }}
                 </ng-container>
 
                 <!-- Redirect message -->
