--- a/src/app/modules/auth/sign-up/sign-up.component.html
+++ b/src/app/modules/auth/sign-up/sign-up.component.html
@@ -40,7 +40,7 @@
                 <a
                     class="ml-1 hover:underline"
                     style="color: #FF941A;"
-                    [routerLink]="['']">ENTRE
+                    [routerLink]="['/sign-in']">ENTRE
                 </a>
             </div>
 
@@ -93,24 +93,24 @@
                     <input
                         id="senha"
                         matInput
-                        type="senha"
+                        type="password"
                         formControlName="senha"
                         #senhaField>
                     <button
                         mat-icon-button
                         type="button"
-                        (click)="senhaField.type === 'senha' ? senhaField.type = 'text' : senhaField.type = 'senha'"
+                        (click)="senhaField.type === 'password' ? senhaField.type = 'text' : senhaField.type = 'password'"
                         matSuffix>
                         <mat-icon
                             class="icon-size-5"
-                            *ngIf="senhaField.type === 'senha'"
+                            *ngIf="senhaField.type === 'password'"
                             [svgIcon]="'heroicons_solid:eye'"></mat-icon>
                         <mat-icon
                             class="icon-size-5"
                             *ngIf="senhaField.type === 'text'"
                             [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
                     </button>
-                    <mat-error>
+                    <mat-error *ngIf="formGroup.get('senha').hasError('required')">
                         Campo obrigatório
                     </mat-error>
                 </mat-form-field>
@@ -122,6 +122,9 @@
                         id="company-confirm"
                         matInput
                         formControlName="razaoSocial">
+                        <mat-error *ngIf="formGroup.get('razaoSocial').hasError('required')">
+                            Campo obrigatório
+                        </mat-error>
                 </mat-form-field>
 
                 <mat-form-field class="w-full">
@@ -129,7 +132,12 @@
                     <input
                         id="company-confirm"
                         matInput
+                        [value]="formGroup.get('cpfCnpj').value | cpfCnpjPipe"
+                        maxlength="18"
                         formControlName="cpfCnpj">
+                        <mat-error *ngIf="formGroup.get('cpfCnpj').hasError('required')">
+                            Campo obrigatório
+                        </mat-error>
                 </mat-form-field>
 
                 <!-- Submit button -->
