cadastro com google

--- a/src/app/modules/auth/sign-up/dialogs/signUpCompany.dialog.html
+++ b/src/app/modules/auth/sign-up/dialogs/signUpCompany.dialog.html
@@ -1,1 +1,39 @@
-<div>Em construção...</div>
+<div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between center">
+    Informe os dados da empresa
+    <button tabindex="-1" mat-icon-button (click)="close()" matTooltip="Fechar">
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
+<mat-dialog-content>
+    <form class="mt-8" [formGroup]="formGroup">
+        <mat-form-field class="w-full">
+            <mat-label>Razão Social</mat-label>
+            <input
+                id="company-confirm"
+                matInput
+                formControlName="razaoSocial">
+                <mat-error *ngIf="formGroup.get('razaoSocial').hasError('required')">
+                    Campo obrigatório
+                </mat-error>
+        </mat-form-field>
+        
+        <mat-form-field class="w-full">
+            <mat-label>CPF ou CPNJ</mat-label>
+            <input
+                id="company-confirm"
+                matInput
+                [value]="formGroup.get('cpfCnpj').value | cpfCnpjPipe"
+                maxlength="18"
+                numberOnly
+                formControlName="cpfCnpj"
+            />
+            <mat-error *ngIf="formGroup.get('cpfCnpj').hasError('required')">
+                Campo obrigatório
+            </mat-error>
+        </mat-form-field>
+    </form>
+</mat-dialog-content>
+<mat-dialog-actions fxLayout="row" fxLayoutGap="8px" fxLayoutAlign="end center">
+    <button mat-raised-button (click)="close()">Voltar</button>
+    <button mat-raised-button class="accent" (click)="salvar()">Salvar</button>
+</mat-dialog-actions>
