--- a/src/app/modules/auth/sign-up/sign-up.component.html
+++ b/src/app/modules/auth/sign-up/sign-up.component.html
@@ -169,6 +169,7 @@
                     <button
                         class="flex-auto"
                         type="button"
+                        (click)="authenticate('facebook')"
                         mat-stroked-button>
                         <div class="w-8">
                             <img src="assets/icons/facebook.svg"  />
@@ -177,6 +178,7 @@
                     <button
                         class="flex-auto"
                         type="button"
+                        (click)="authenticate('google')"
                         mat-stroked-button>
                         <div class="w-8">
                             <img src="assets/icons/google.svg"  />
