implementando login e povoando navegação

--- a/src/app/layout/layouts/vertical/classy/classy.component.html
+++ b/src/app/layout/layouts/vertical/classy/classy.component.html
@@ -19,7 +19,7 @@
                 <img
                     class="w-full h-full rounded-full"
                     *ngIf="data.user.avatar"
-                    [src]="data.user.avatar"
+                    src="{{user.image}}"
                     alt="User avatar">
                 <mat-icon
                     class="icon-size-24"
