--- a/src/app/layout/common/user-menu/user-menu.component.html
+++ b/src/app/layout/common/user-menu/user-menu.component.html
@@ -6,7 +6,7 @@
         <img
             class="w-7 h-7 rounded-full"
             *ngIf="showAvatar && user.avatar"
-            [src]="user.avatar">
+            src="{{user.image}}">
         <mat-icon
             *ngIf="!showAvatar || !user.avatar"
             [svgIcon]="'heroicons_outline:user-circle'"></mat-icon>
