--- a/src/app/modules/authentication/user/list/user-list.component.html
+++ b/src/app/modules/authentication/user/list/user-list.component.html
@@ -83,7 +83,7 @@
             <div [ngClass]="{ hidden: dataSource.length == 0 }">
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef> Nome </th>
-                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
                   </ng-container>
 
                 <ng-container matColumnDef="email">
@@ -101,6 +101,11 @@
                         </button>
                         <mat-menu #actionsMenu="matMenu" yPosition="below" xPosition="before">
                             <button mat-menu-item>
+                                <mat-icon>edit</mat-icon>
+                                <span>Editar</span>
+                            </button>
+                            <button mat-menu-item>
+                                <mat-icon>delete</mat-icon>
                                 <span>Excluir</span>
                             </button>
                         </mat-menu>
