--- a/src/app/modules/authentication/user/list/user-list.component.html
+++ b/src/app/modules/authentication/user/list/user-list.component.html
@@ -67,7 +67,7 @@
         </div>
         <!-- Actions -->
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <button class="ml-3" mat-flat-button [color]="'accent'">
+            <button class="ml-3" mat-flat-button [color]="'accent'" (click)="navigation()">
                 <mat-icon
                     class="icon-size-5 mr-2"
                     [svgIcon]="'heroicons_solid:pencil-alt'"
@@ -89,6 +89,11 @@
                 <ng-container matColumnDef="email">
                     <th mat-header-cell *matHeaderCellDef> Email </th>
                     <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="profile">
+                    <th mat-header-cell *matHeaderCellDef> Perfil </th>
+                    <td mat-cell *matCellDef="let element"> Administrador </td>
                 </ng-container>
 
                 <ng-container matColumnDef="actions">
