--- a/src/app/modules/authentication/profile/list/profile-list.component.html
+++ b/src/app/modules/authentication/profile/list/profile-list.component.html
@@ -27,7 +27,7 @@
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-right'"
                         ></mat-icon>
-                        <span class="ml-1 text-secondary">Usuários</span>
+                        <span class="ml-1 text-secondary">Perfil</span>
                     </div>
                 </div>
                 <div class="flex sm:hidden">
@@ -61,7 +61,7 @@
                         truncate
                     "
                 >
-                    Lista de usuários
+                    Lista de perfis
                 </h2>
             </div>
         </div>
@@ -89,61 +89,44 @@
         [ngClass]="{ hidden: dataSource.length == 0 }"
     >
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <div>
-                <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef>Nome</th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.nome }}
-                    </td>
-                </ng-container>
+            <ng-container matColumnDef="descricao">
+                <th mat-header-cell *matHeaderCellDef>Descrição</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.descricao }}
+                </td>
+            </ng-container>
 
-                <ng-container matColumnDef="email">
-                    <th mat-header-cell *matHeaderCellDef>Email</th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.email }}
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="profile">
-                    <th mat-header-cell *matHeaderCellDef>Perfil</th>
-                    <td mat-cell *matCellDef="let element">Administrador</td>
-                </ng-container>
-
-                <ng-container matColumnDef="actions">
-                    <mat-header-cell class="actions-cell" *matHeaderCellDef>
-                    </mat-header-cell>
-                    <mat-cell class="actions-cell" *matCellDef="let element">
-                        <button
-                            type="button"
-                            mat-icon-button
-                            [matMenuTriggerFor]="actionsMenu"
-                            (click)="$event.stopPropagation()"
-                        >
-                            <mat-icon>more_horiz</mat-icon>
+            <ng-container matColumnDef="actions">
+                <mat-header-cell class="actions-cell" *matHeaderCellDef>
+                </mat-header-cell>
+                <mat-cell class="actions-cell" *matCellDef="let element">
+                    <button
+                        type="button"
+                        mat-icon-button
+                        [matMenuTriggerFor]="actionsMenu"
+                        (click)="$event.stopPropagation()"
+                    >
+                        <mat-icon>more_horiz</mat-icon>
+                    </button>
+                    <mat-menu
+                        #actionsMenu="matMenu"
+                        yPosition="below"
+                        xPosition="before"
+                    >
+                        <button mat-menu-item (click)="editRow(element)">
+                            <mat-icon>edit</mat-icon>
+                            <span>Editar</span>
                         </button>
-                        <mat-menu
-                            #actionsMenu="matMenu"
-                            yPosition="below"
-                            xPosition="before"
-                        >
-                            <button mat-menu-item (click)="editRow(element)">
-                                <mat-icon>edit</mat-icon>
-                                <span>Editar</span>
-                            </button>
-                            <button mat-menu-item (click)="deleteRow(element)">
-                                <mat-icon>delete</mat-icon>
-                                <span>Excluir</span>
-                            </button>
-                        </mat-menu>
-                    </mat-cell>
-                </ng-container>
+                        <button mat-menu-item (click)="deleteRow(element)">
+                            <mat-icon>delete</mat-icon>
+                            <span>Excluir</span>
+                        </button>
+                    </mat-menu>
+                </mat-cell>
+            </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr
-                    mat-row
-                    *matRowDef="let row; columns: displayedColumns"
-                ></tr>
-            </div>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
     </div>
 
