--- a/src/app/modules/operations/service/list/service-list.component.html
+++ b/src/app/modules/operations/service/list/service-list.component.html
@@ -27,7 +27,7 @@
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-right'"
                         ></mat-icon>
-                        <span class="ml-1 text-secondary">Cliente</span>
+                        <span class="ml-1 text-secondary">Serviços</span>
                     </div>
                 </div>
                 <div class="flex sm:hidden">
@@ -61,7 +61,7 @@
                         truncate
                     "
                 >
-                    Lista de clientes
+                    Lista de serviços
                 </h2>
             </div>
         </div>
@@ -89,10 +89,10 @@
         [ngClass]="{ hidden: dataSource.length == 0 }"
     >
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <ng-container matColumnDef="nome">
-                <th mat-header-cell *matHeaderCellDef>Nome</th>
+            <ng-container matColumnDef="descricao">
+                <th mat-header-cell *matHeaderCellDef>Descrição</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.nome }}
+                    {{ element.descricao }}
                 </td>
             </ng-container>
 
