--- a/src/app/customs-select/city-select/city-select.component.html
+++ b/src/app/customs-select/city-select/city-select.component.html
@@ -1,16 +1,6 @@
-<div class="w-100p flex align-left align-bottom gap-10 body-container">
-    <ng-select
-        #select
-        [items]="filtered | async"
-        [loading]="loading"
-        [typeahead]="search"
-        class="custom-select"
-        appendTo="body"
-        placeholder="Escolha a cidade"
-        [(ngModel)]="innerValue"
-        [disabled]="_disabled"
-    >
-        <ng-template ng-label-tmp let-item="item">{{ item.descricao }}</ng-template>
-        <ng-template ng-option-tmp let-item="item">{{ item.descricao }}</ng-template>
-    </ng-select>
-</div>
+<label for="city">Cidade</label>
+<ng-select #select labelForId="city" [items]="filtered | async" [loading]="loading"
+    [typeahead]="pesquisa" class="custom-select" [(ngModel)]="value" notFoundText="Não encontrei nenhuma cidade :(">
+    <ng-template class="container" ng-label-tmp let-item="item">{{item.descricao}}</ng-template>
+    <ng-template class="container" ng-option-tmp let-item="item">{{item.descricao}}</ng-template>
+</ng-select>
