BAW-001 - Implementing addres for client in system

--- a/src/app/customs-select/customs-select.scss
+++ b/src/app/customs-select/customs-select.scss
@@ -1,6 +1,7 @@
 .custom-select  {
     border: 1px solid #CBD5E1 !important;
     border-radius: 8px !important;
+    margin: 6px 0;
 }
 
 .custom-select .ng-select-container {
